--- a/HTML Wireframe/transfer.html
+++ b/HTML Wireframe/transfer.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="welcome.html">Anabu's Offender Locator</a>
             <ul class="navbar-nav ms-auto text-center">
-                <li><a class="nav-link" href=""><img src="images/printer.png" alt="Print File" height="30px" width="30px"></a></li>
+                <li><a class="nav-link" href="" onclick="printTransfer()"><img src="images/printer.png" alt="Print File" height="30px" width="30px"></a></li>
         </nav>
         
         <div class="row">
@@ -124,5 +124,10 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        function printTransfer() {
+            window.print();
+        }
+     </script> 
 </body>
 </html>
