--- a/HTML Wireframe/login.html
+++ b/HTML Wireframe/login.html
@@ -68,9 +68,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
         function validate(){
+            var defaultPassword = "admin"
             var inputpassword = document.getElementById("inputpassword").value;
             var inputconfirm = document.getElementById("inputconfirm").value;
-            if (inputpassword == "admin" && inputconfirm == "admin"){
+            if (inputpassword == defaultPassword && inputconfirm == defaultPassword){
                 alert("Log-in Successfully");
                 window.location.href = 'lookupAdmin.html'
                 return false;
@@ -79,6 +80,9 @@
                 alert("Log-in Failed");
             }
         }
+        // function passPword(){
+        //     var inputpassword = 
+        // }
     </script>
 </body>
 </html>
