--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -64,7 +64,7 @@
     <div class="container-lg">
       <h2>SEARCH RESULTS:</h2>
       <div class="table-responsive-admin">
-        <table id="offenderTable" class="table table-dark table-striped" >
+        <table id="lookupTable" class="table table-dark table-striped" >
           <tr>
             <th>First Name</th>
             <th>Last Name</th>
