--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -47,24 +47,24 @@
       <div class="row">
         <div class="col-md-4 col-sm-12" id="lookupfname">
           <label for="searchfname">First Name:</label>
-          <input type="text" class="form-control" name="searchfname" id="searchFName" placeholder="John">
+          <input type="text" class="form-control" name="searchFName" id="searchFName" placeholder="John">
         </div>
         <div class="col-md-4 col-sm-12" id="lookuplname">
           <label for="searchlname">Last Name:</label>
-          <input type="text" class="form-control" name="searchlname" id="searchLName" placeholder="Doe">
+          <input type="text" class="form-control" name="searchLName" id="searchLName" placeholder="Doe">
         </div>
         <div class="col-md-4 col-sm-12" id="lookupoffenderid">
           <label for="searchoffenderid">Offender ID:</label>
           <input type="text" class="form-control" name="searchoffenderid" id="searchOffenderid" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-light"><i class="fas fa-search"></i> Search</button>
+      <button type="submit" class="btn btn-outline-light" id="searchOffenderBtn" onclick="checkSearch()"><i class="fas fa-search"></i> Search</button>
     </div>
     <hr style="margin-top: 5%;">
     <div class="container-lg">
       <h2>SEARCH RESULTS:</h2>
       <div class="table-responsive-admin">
-        <table id="lookupTable" class="table table-dark table-striped" >
+        <table id="lookupTable" class="table table-dark table-striped">
           <tr>
             <th>First Name</th>
             <th>Last Name</th>
@@ -72,17 +72,13 @@
             <th>Gender</th>
             <!-- <th>Offender ID</th>
             <th>Case ID</th> -->
-            <th>Case Status</th>
             <th>Offense</th>
           </tr>
-          <!-- <tr>
+          <tr>
             <td>John</td>
             <td>Doe</td>
             <td>40</td>
             <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
             <td>Theft</td>
           </tr>
           <tr>
@@ -90,11 +86,15 @@
             <td>Edellon</td>
             <td>22</td>
             <td>Male</td>
-            <td>0002</td>
-            <td>0002</td>
-            <td>Ongoing</td>
             <td>Theft</td>
-          </tr> -->
+          </tr>
+          <tr>
+            <td>Renshi</td>
+            <td>Sena</td>
+            <td>22</td>
+            <td>Male</td>
+            <td>Libel</td>
+          </tr>
         </table>
       </div>
     </div>
