--- a/HTML Wireframe/lookupAdmin.html
+++ b/HTML Wireframe/lookupAdmin.html
@@ -71,109 +71,98 @@
       <div class="row">
         <div class="col-md-4 col-sm-12" id="lookupfname">
           <label for="searchfname">First Name:</label>
-          <input type="text" class="form-control" name="searchfname" id="searchfname" placeholder="John">
+          <input type="text" class="form-control" name="searchALFname" id="searchALFname" placeholder="John">
         </div>
         <div class="col-md-4 col-sm-12" id="lookuplname">
           <label for="searchlname">Last Name:</label>
-          <input type="text" class="form-control" name="searchlname" id="searchlname" placeholder="Doe">
+          <input type="text" class="form-control" name="searchALLname" id="searchALLname" placeholder="Doe">
         </div>
         <div class="col-md-4 col-sm-12" id="lookupoffenderid">
           <label for="searchoffenderid">Offender ID:</label>
-          <input type="text" class="form-control" name="searchoffenderid" id="searchoffenderid" placeholder="0001">
+          <input type="text" class="form-control" name="searchALoffenderid" id="searchALoffenderid" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-light"><i class="fas fa-search"></i> Search</button>
+      <button type="submit" class="btn btn-outline-light" id="searchAdminLookup" onclick="checkSearchAL()"><i class="fas fa-search"></i> Search</button>
     </div>
     <hr style="margin-top: 5%;">
     <div class="container-lg">
       <h2>SEARCH RESULTS:</h2>
       <div class="table-responsive-admin">
-        <table class="table table-dark table-striped">
+        <!-- Editable table -->
+
+  <div class="card-body">
+    <div id="table" class="table-editable">
+      <table class="table table-dark table-striped"> 
+        <thead>
           <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Offender ID</th>
-            <th>Case ID</th>
-            <th>Case Status</th>
-            <th>Case Description</th>
-            <th>Offense</th>
-            <td></td>
+            <th class="text-center">Offender ID</th>
+            <th class="text-center">First Name</th>
+            <th class="text-center">Last Name</th>
+            <th class="text-center">Age</th>
+            <th class="text-center">Gender</th>
+            <th class="text-center">Offense</th>
+            <th class="text-center">Case Status</th>
+            <th></th>
           </tr>
+        </thead>
+        <tbody>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
+            <td class="pt-3-half" contenteditable="false">0001 </td>
+            <td class="pt-3-half" contenteditable="true">Aurelia </td>
+            <td class="pt-3-half" contenteditable="true">Vega</td>
+            <td class="pt-3-half" contenteditable="true">30</td>
+            <td class="pt-3-half" contenteditable="false">Female</td>
+            <td class="pt-3-half" contenteditable="true">Theft</td>
+            <td class="pt-3-half" contenteditable="true">Ongoing</td>
+            <td class="pt-3-half">
+            </td>
           </tr>
+          <!-- This is our clonable table line -->
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
+            <td class="pt-3-half" contenteditable="false">0002</td>
+            <td class="pt-3-half" contenteditable="true">Joshua Yves</td>
+            <td class="pt-3-half" contenteditable="true">Edellon</td>
+            <td class="pt-3-half" contenteditable="true">22</td>
+            <td class="pt-3-half" contenteditable="false">Male</td>
+            <td class="pt-3-half" contenteditable="true">Attempted murder</td>
+            <td class="pt-3-half" contenteditable="true">Ongoing</td>
+            <td class="pt-3-half">
+            </td>
+           
           </tr>
+          <!-- This is our clonable table line -->
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
+            <td class="pt-3-half" contenteditable="false">0003 </td>
+            <td class="pt-3-half" contenteditable="true">Renshi</td>
+            <td class="pt-3-half" contenteditable="true">Sena</td>
+            <td class="pt-3-half" contenteditable="true">34</td>
+            <td class="pt-3-half" contenteditable="false">Male</td>
+            <td class="pt-3-half" contenteditable="true">Forgery</td>
+            <td class="pt-3-half" contenteditable="true">Ongoing</td>
+            <td class="pt-3-half">
+            </td>
+            </tr>
+          <!-- This is our clonable table line -->
+          <tr class="hide">
+            <td class="pt-3-half" contenteditable="false">0004 </td>
+            <td class="pt-3-half" contenteditable="true">Jhousua</td>
+            <td class="pt-3-half" contenteditable="true">Jumalon</td>
+            <td class="pt-3-half" contenteditable="true">23</td>
+            <td class="pt-3-half" contenteditable="false">Male</td>
+            <td class="pt-3-half" contenteditable="true">Libel</td>
+            <td class="pt-3-half" contenteditable="true">Ongoing</td>
+            <td class="pt-3-half">
+            </td>
           </tr>
-          <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
-          </tr>
-          <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
-          </tr>
-          <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>0001</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-            <td>Lorem Ipsum</td>
-            <td>Theft</td>
-            <td><a href="">Update</a></td>
-          </tr>
-        </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary">Save changes</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+  </div>
+</div>
       </div>
     </div>
 
@@ -190,5 +179,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
   crossorigin="anonymous"> </script>
+  <script src="JavaScript/script.js"></script>
 </body>
 </html>
