--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Offender Locator Welcome</title>
 </head>
 
@@ -34,7 +34,7 @@
             </div>
         </nav>
         <div class="row" >
-            <div class="col-md-6" style="margin: auto;"><img class="rounded img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
+            <div class="col-md-6" style="margin: auto;"><img class="rounded img-fluid" src="images/welcome_img.jpg">
             </div>
     
             <div class="col-md-6 ">
