--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -45,20 +45,24 @@
       <hr>
       <h2>Required Information</h2>
       <div class="row">
-        <div class="col-md-4 col-sm-12" id="lookupfname">
-          <label for="searchfname">First Name:</label>
-          <input type="text" class="form-control" name="searchFName" id="searchFName" placeholder="John">
-        </div>
-        <div class="col-md-4 col-sm-12" id="lookuplname">
-          <label for="searchlname">Last Name:</label>
-          <input type="text" class="form-control" name="searchLName" id="searchLName" placeholder="Doe">
-        </div>
-        <div class="col-md-4 col-sm-12" id="lookupoffenderid">
-          <label for="searchoffenderid">Offender ID:</label>
-          <input type="text" class="form-control" name="searchoffenderid" id="searchOffenderid" placeholder="0001">
-        </div>
+        <form>
+          <div class="col-md-4 col-sm-12" id="lookupfname">
+            <label for="searchfname">First Name:</label>
+            <input type="text" class="form-control" name="searchFName" id="searchFName" placeholder="John" required>
+          </div>
+          <div class="col-md-4 col-sm-12" id="lookuplname">
+            <label for="searchlname">Last Name:</label>
+            <input type="text" class="form-control" name="searchLName" id="searchLName" placeholder="Doe" required>
+          </div>
+          <div class="col-md-4 col-sm-12" id="lookupoffenderid">
+            <label for="searchoffenderid">Offender ID:</label>
+            <input type="text" class="form-control" name="searchoffenderid" id="searchOffenderid" placeholder="0001" required>
+          </div>
+          <button type="submit" class="btn btn-outline-dark" id="searchOffenderBtn"><i class="fas fa-search"></i> Search</button>
+        </form>
+        
       </div>
-      <button type="submit" class="btn btn-outline-dark" id="searchOffenderBtn" onclick="checkSearch()"><i class="fas fa-search"></i> Search</button>
+      
     </div>
     <hr style="margin-top: 5%;">
     <div class="container-lg">
