--- a/HTML Wireframe/lookupAdmin.html
+++ b/HTML Wireframe/lookupAdmin.html
@@ -68,22 +68,22 @@
       <li>Click the search button to see results.</li>
       <hr>
       <h2>Required Information</h2>
-      <div class="row">
-        <div class="col-md-4 col-sm-12" id="lookupfname">
-          <label for="searchfname">First Name:</label>
-          <input type="text" class="form-control" name="searchALFname" id="searchALFname" placeholder="John">
+
+      <form>
+        <div class="row">
+          <div class="col-md-4 col-sm-12" id="lookupfname">
+            <label for="searchfname">First Name:</label>
+            <input type="text" class="form-control" name="searchALFname" id="searchALFname" placeholder="John" required>
+          </div>
+          <div class="col-md-4 col-sm-12" id="lookupoffenderid">
+            <label for="searchoffenderid">Offender ID:</label>
+            <input type="text" class="form-control" name="searchALoffenderid" id="searchALoffenderid" placeholder="0001" required>
+          </div>
         </div>
-        <div class="col-md-4 col-sm-12" id="lookuplname">
-          <label for="searchlname">Last Name:</label>
-          <input type="text" class="form-control" name="searchALLname" id="searchALLname" placeholder="Doe">
-        </div>
-        <div class="col-md-4 col-sm-12" id="lookupoffenderid">
-          <label for="searchoffenderid">Offender ID:</label>
-          <input type="text" class="form-control" name="searchALoffenderid" id="searchALoffenderid" placeholder="0001">
-        </div>
+        <button type="submit" class="btn btn-outline-dark" id="searchAdminLookup"><i class="fas fa-search"></i> Search</button>
       </div>
-      <button type="submit" class="btn btn-outline-dark" id="searchAdminLookup" onclick="checkSearchAL()"><i class="fas fa-search"></i> Search</button>
-    </div>
+      </form>
+      
     <hr style="margin-top: 5%;">
     <div class="container-lg">
       <h2>SEARCH RESULTS:</h2>
